# GameEngineArchTest

./: .gitmodules  CMakeLists.txt  README.md
src/: camera.h  component.h  component_interfaces.h  entity.h  entity.inl  entity_storage.h  handle.h  main.cpp  render.h  scene.cpp  scene.h  sparse_concepts.h  sparse_map.h  sparse_set.h  spatial_index.h  sprite.h  sprite_renderer.h  test.h  transform.h
src/core/: application.hpp  window.hpp
src/core/input/: input.cpp  input.hpp  key.hpp  mouse.hpp
src/math/: rect.hpp  rect.inl  vector2.hpp  vector2.inl
src/rendering/: render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp  tileset.hpp
src/scene/: entity.hpp  entity.inl  scene.hpp  scene.inl  scene_manager.hpp
src/scene/components/: camera.hpp  sprite_renderer.hpp  tilemap.hpp  transform.hpp
src/scene/interfaces/: initialisable.hpp  renderable.hpp  singleton.hpp  updatable.hpp
src/scene/tags/: main_camera_tag.hpp
src/spatial/: spatial_index.cpp  spatial_index.hpp  spatial_system.cpp  spatial_system.hpp
src/utils/: to_rl.cpp  to_rl.hpp
src/zgame_test/: grid.hpp  grid_utils.hpp  mine_cart.hpp  rail.hpp  rail_map.hpp  rail_placer.hpp  rail_types.hpp
